feat: yanlis olan birkac yeri duzelttim
